--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <h1>carros</h1> 
-    <p>gosto de carros</p>
+    <img src="" alt="gosto de carros">
 </header>
     
 </body>
