--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <h1>carros</h1> 
-    <img src="" alt="gosto de carros">
+    <img src="volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
 </header>
     
 </body>
