--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
 </head>
 <body>
-<header>
+<heade class=" ">
     <h1>carros</h1> 
     <img src="volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
 </header>
