--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h1>carros</h1> 
     <img src="volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
 </header>
+<section>
+    <h2>section 1
+    </h2>
+</section>
     
 </body>
 </html>
