--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <h1>carros</h1> 
     <img src="volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
 </header>
-<section>
+<section>   
     <h2>section 1
-    </h2>
+        <img src="Chevrolet_Opala_SS_1978_Inca.jpg" alt="opala">
+    </h2> Jean Poul Chevrolet_Opala_SS_1978_Inca
 </section>
     
 </body>
