--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 </header>
 <section>   
     <h2>section 1
-        <img src="Chevrolet_Opala_SS_1978_Inca.jpg" alt="opala">
-    </h2> Jean Poul Chevrolet_Opala_SS_1978_Inca
-</section>
+        <img src="Chevrolet_Opala_SS_1978_Inca.jpg" alt="opala"
+        <h2>opala</h2>
+<section>
+<section class="section2">
     
 </body>
 </html>
