--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h2>opala</h2>
 <section>
 <section class="section2">
-    
+  <img src="carro" alt="lamborghini">  
+  <h3>carro</h3>
 </body>
 </html>
