--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <heade class=" ">
     <h1>carros</h1> 
-    <img src="volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
+    <img class=""volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
 </header>
 <section>   
     <h2>section 1
@@ -18,7 +18,8 @@
         <h2>opala</h2>
 <section>
 <section class="section2">
-  <img src="carro" alt="lamborghini">  
+  <img src="carro" alt="carro">  
   <h3>carro</h3>
+  </section>
 </body>
 </html>
