--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <h3>carro</h3>
   </section>
 
-  <footer>
-    
+  <footer class="rodape">
+    <img src="concessionarias" alt="concessionaria">
+  <p>concessionaria carros</p>
   </footer>
-  <img src="" alt="">
-  <p>biblioteca nacional brasileira</p>
+  
 </body>
 </html>
