--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>041.raphael
-        <link rel="stylesheet" href="style.css">
-    </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>041.raphael
+    <link rel="stylesheet" href="style.css">
+  </title>
 </head>
+
 <body>
-<heade class=" ">
-    <h1>carros</h1> 
-    <img class=""volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
-</header>
-<section>   
+  <header class=" ">
+    <h1>carros</h1>
+    <img class="" volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
+  </header>
+  <section1>
     <h2>section 1
-        <img src="Chevrolet_Opala_SS_1978_Inca.jpg" alt="opala"
-        <h2>opala</h2>
-<section>
-<section class="section2">
-  <img src="carro" alt="carro">  
-  <h3>carro</h3>
-  </section>
+      <img src="Chevrolet_Opala_SS_1978_Inca.jpg" alt="opala" <h2>opala
+    </h2>
+  </section1>
+  <section2 class="section2">
+    <img src="carro" alt="carro">
+    <h3>carro</h3>
+  </section2>
 
   <footer class="rodape">
     <img src="concessionarias" alt="concessionaria">
-  <p>concessionaria carros</p>
+    <p>concessionaria carros</p>
   </footer>
-  
+
 </body>
+
 </html>
