--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,8 +15,8 @@
     <img class="" volkswagen-polo-track-2023-4-1152x648.jpg" alt="gosto de carros">
   </header>
   <section1>
-    <h2>section 1
-      <img src="Chevrolet_Opala_SS_1978_Inca.jpg" alt="opala" <h2>opala
+    <h2
+      <img src="Chevrolet_Opala_SS_1978_Inca.jpg" alt="opala">
     </h2>
   </section1>
   <section2 class="section2">
