--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <footer class="rodape">
     <img src="concessionarias" alt="concessionaria">
     <p>concessionaria carros</p>
+    <p>teste</p>
   </footer>
 
 </body>
